...
                .testTag("searchTitle"),
            text = stringResource(id = R.string.title_favorites),
            textAlign = TextAlign.Center,
            fontSize = 30.sp,
            fontWeight = FontWeight.Bold
        )
        LazyColumn(modifier = Modifier.testTag("carList")) {
            itemsIndexed(favoriteCars) { index, car ->
                CarCard(
                    car = car,
                    index = index,
                    onClick = {
                        navController.navigate("car/${car.id}")
...
